[gd_scene load_steps=6 format=3 uid="uid://dnq1q0n3guopw"]

[ext_resource type="Script" path="res://quiz_converter_window.gd" id="1_3k7kf"]
[ext_resource type="Script" path="res://code/question_parser.gd" id="2_tkhdl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0j15j"]
bg_color = Color(0.0823529, 0.0862745, 0.113725, 1)
expand_margin_bottom = 10.0

[sub_resource type="CodeHighlighter" id="CodeHighlighter_y28an"]
number_color = Color(0.617753, 0.8503, 0.942566, 1)
symbol_color = Color(0.645871, 0.852534, 0.571299, 1)
function_color = Color(0.74558, 0.74558, 0.74558, 1)
member_variable_color = Color(0.830335, 0.830335, 0.830335, 1)

[sub_resource type="CodeHighlighter" id="CodeHighlighter_gr71h"]
number_color = Color(0.617753, 0.8503, 0.942566, 1)
symbol_color = Color(0.597179, 0.874238, 0.442395, 1)
function_color = Color(0.74558, 0.74558, 0.74558, 1)
member_variable_color = Color(0.830335, 0.830335, 0.830335, 1)

[node name="QuizConverter" type="CanvasLayer"]
script = ExtResource("1_3k7kf")

[node name="QuestionParser" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_tkhdl")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -62.0
offset_top = -35.0
offset_right = 62.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0636754, 0.0673831, 0.0896311, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0j15j")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 2
offset_top = 4.0
offset_right = 1280.0
offset_bottom = 35.0

[node name="EditorMenuButtons" type="MenuButton" parent="VBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.435153, 0.666517, 0.739496, 1)
theme_override_colors/font_color = Color(0.733005, 0.733005, 0.733005, 1)
theme_override_font_sizes/font_size = 15
text = "File"

[node name="Convert" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Convert"
flat = true

[node name="Control" type="Control" parent="VBoxContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HelpButton" type="Button" parent="VBoxContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 15
text = "Help"
flat = true

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5
split_offset = 600

[node name="LeftCodeEdit" type="CodeEdit" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/word_highlighted_color = Color(0.278394, 0.336247, 0.4274, 1)
theme_override_colors/current_line_color = Color(0.133759, 0.14289, 0.175695, 1)
theme_override_colors/background_color = Color(0.0705882, 0.0745098, 0.0980392, 1)
theme_override_colors/font_placeholder_color = Color(0.226707, 0.226707, 0.226707, 1)
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.784314, 1)
theme_override_colors/selection_color = Color(0.215686, 0.333333, 0.498039, 1)
theme_override_colors/font_selected_color = Color(0.68214, 0.682133, 0.692124, 1)
theme_override_colors/caret_color = Color(0.733005, 0.733005, 0.733005, 1)
theme_override_font_sizes/font_size = 18
theme_override_colors/line_number_color = Color(0.194349, 0.194349, 0.194349, 1)
theme_override_colors/executing_line_color = Color(0.223103, 0.223103, 0.223103, 1)
theme_override_colors/brace_mismatch_color = Color(0.576471, 0, 0, 1)
theme_override_colors/folded_code_region_color = Color(0.548963, 0.548963, 0.548963, 1)
theme_override_colors/code_folding_color = Color(0.533037, 0.533037, 0.533037, 1)
placeholder_text = "Insert markup quiz here."
wrap_mode = 1
scroll_smooth = true
scroll_past_end_of_file = true
syntax_highlighter = SubResource("CodeHighlighter_y28an")
highlight_all_occurrences = true
line_folding = true
gutters_draw_line_numbers = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="RightCodeEdit" type="CodeEdit" parent="VBoxContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/word_highlighted_color = Color(0.278394, 0.336247, 0.4274, 1)
theme_override_colors/current_line_color = Color(0.133759, 0.14289, 0.175695, 1)
theme_override_colors/background_color = Color(0.0705882, 0.0745098, 0.0980392, 1)
theme_override_colors/font_placeholder_color = Color(0.226707, 0.226707, 0.226707, 1)
theme_override_colors/font_color = Color(0.776471, 0.776471, 0.784314, 1)
theme_override_colors/selection_color = Color(0.215686, 0.333333, 0.498039, 1)
theme_override_colors/font_selected_color = Color(0.68214, 0.682133, 0.692124, 1)
theme_override_colors/caret_color = Color(0.733005, 0.733005, 0.733005, 1)
theme_override_font_sizes/font_size = 18
theme_override_colors/line_number_color = Color(0.194349, 0.194349, 0.194349, 1)
theme_override_colors/executing_line_color = Color(0.223103, 0.223103, 0.223103, 1)
theme_override_colors/brace_mismatch_color = Color(0.576471, 0, 0, 1)
theme_override_colors/folded_code_region_color = Color(0.548963, 0.548963, 0.548963, 1)
theme_override_colors/code_folding_color = Color(0.533037, 0.533037, 0.533037, 1)
placeholder_text = "Output csv goes here."
wrap_mode = 1
scroll_smooth = true
scroll_past_end_of_file = true
syntax_highlighter = SubResource("CodeHighlighter_gr71h")
highlight_all_occurrences = true
line_folding = true
gutters_draw_line_numbers = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true

[node name="MarkupHelp" type="Window" parent="VBoxContainer"]
unique_name_in_owner = true
title = "Markup Help"
position = Vector2i(0, 36)
size = Vector2i(480, 540)
visible = false
popup_window = true
force_native = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/MarkupHelp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0823529, 0.0862745, 0.113725, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarkupHelp/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="MarkupHelpText" type="RichTextLabel" parent="VBoxContainer/MarkupHelp/ColorRect/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
theme_override_colors/default_color = Color(0.544974, 0.544974, 0.544974, 1)
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "# Written Response (WR)
WR Essay Question {{Hint: Be concise}}
Explain the process of photosynthesis.
Points: 10
Difficulty: 5
Initial Text: Begin your answer here...
Answer Key: Photosynthesis is the process by which plants use sunlight, water, and carbon dioxide to produce oxygen and energy in the form of sugar.
---

# Short Answer (SA)
SA Capital of France {{Hint: 5 letters}}
What is the capital of France?
Points: 2
Difficulty: 1
Input Box: 1,20
*100 Paris regexp
50 France
---

# Matching (M)
M Match Countries and Capitals {{Hint: Think globally}}
Match the countries with their capitals.
Points: 5
Difficulty: 3
Scoring: EquallyWeighted
Choice: France => Match: Paris
Choice: Germany => Match: Berlin
Choice: Japan => Match: Tokyo
---

# Multiple Choice (MC)
MC Largest Planet {{Hint: Gas giant}}
Which is the largest planet in our solar system?
Points: 1
Difficulty: 2
*100 Jupiter || Correct! Jupiter is the largest planet.
0 Saturn || Close, but Saturn is the second-largest.
0 Earth || Earth is much smaller than Jupiter.
0 Mars || Mars is one of the smaller planets.
---

# True/False (TF)
TF Earth's Shape {{Hint: Modern science}}
The Earth is flat.
Points: 1
Difficulty: 1
*False || Correct! The Earth is approximately spherical.
True || Incorrect. The Earth is not flat, it's approximately spherical.
---

# Multi-Select (MS)
MS Primary Colors {{Hint: Think basic}}
Select all the primary colors.
Points: 3
Difficulty: 2
Scoring: RightAnswers
*1 Red || Correct! Red is a primary color.
*1 Blue || Correct! Blue is a primary color.
0 Green || Incorrect. Green is a secondary color.
*1 Yellow || Correct! Yellow is a primary color.
---

# Ordering (O)
O Planets Order {{Hint: From the Sun}}
Arrange the following planets in order of their distance from the Sun, starting with the closest.
Points: 4
Difficulty: 4
Scoring: RightMinusWrong
1. Mercury || Correct! Mercury is closest to the Sun.
2. Venus || Right! Venus is the second planet from the Sun.
3. Earth || Good job! Earth is the third planet from the Sun.
4. Mars || Correct! Mars is the fourth planet from the Sun.
---"
selection_enabled = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
size = Vector2i(208, 163)
